--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.orium.testapplication"
@@ -11,6 +11,8 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         release {
@@ -18,6 +20,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        warningsAsErrors true
+        abortOnError false
+
+        disable 'GoogleAppIndexingWarning'
+        disable 'InvalidPackage'
+    }
+
 
     packagingOptions {
         exclude 'META-INF/LICENSE'
@@ -27,19 +38,40 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile "com.android.support:appcompat-v7:$rootProject.versions.supportLibs"
+    compile "com.android.support:recyclerview-v7:$rootProject.versions.supportLibs"
 
-    compile 'com.squareup.retrofit2:retrofit:2.0.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
+    compile "com.squareup.retrofit2:retrofit:$rootProject.versions.retrofit"
+    compile "com.squareup.retrofit2:converter-gson:$rootProject.versions.retrofit"
+    compile "com.squareup.okhttp3:logging-interceptor:$rootProject.versions.okHttp"
 
-    compile 'com.android.support:recyclerview-v7:23.3.0'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile "com.jakewharton:butterknife:$rootProject.versions.butterKnife"
+    compile "com.github.bumptech.glide:glide:$rootProject.versions.glide"
 
-    provided 'org.glassfish:javax.annotation:10.0-b28'
-    compile 'com.google.dagger:dagger:2.0'
-    apt 'com.google.dagger:dagger-compiler:2.0'
+    compile "com.google.dagger:dagger:$rootProject.versions.dagger"
+    apt "com.google.dagger:dagger-compiler:$rootProject.versions.dagger"
+
+    compile "com.android.support.test.espresso:espresso-idling-resource:2.2.2"
+
+    testCompile "junit:junit:$rootProject.versions.junit"
+
+    androidTestCompile "com.android.support.test:runner:$rootProject.versions.supportTestRunner"
+    androidTestCompile "com.android.support.test:rules:$rootProject.versions.supportTestRunner"
+    androidTestCompile "com.android.support.test.espresso:espresso-core:$rootProject.versions.espresso"
+    androidTestCompile("com.android.support.test.espresso:espresso-contrib:$rootProject.versions.espresso") {
+        exclude module: 'recyclerview-v7'
+        exclude module: 'design'
+        exclude module: 'support-annotations'
+        exclude module: 'support-v4'
+    }
+    androidTestCompile "com.squareup.okhttp3:mockwebserver:$rootProject.versions.okHttp"
+    androidTestCompile "com.android.support:support-annotations:$rootProject.versions.supportLibs"
+}
+
+configurations.compile.dependencies.each { compileDependency ->
+    println "Excluding compile dependency: ${compileDependency.getName()}"
+    configurations.androidTestCompile.dependencies.each { androidTestCompileDependency ->
+        configurations.androidTestCompile.exclude module: "${compileDependency.getName()}"
+    }
 }
