--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0'
+        classpath 'com.android.tools.build:gradle:2.1.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -23,3 +23,22 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext.versions = [
+        dagger                       : '2.4',
+        supportLibs                  : '23.4.0',
+        okHttp                       : '3.2.0',
+        retrofit                     : '2.0.0',
+        butterKnife                  : '7.0.1',
+        glide                        : '3.6.1',
+        timber                       : '4.1.2',
+
+        espresso                     : '2.2.2',
+
+        junit                        : '4.12',
+        robolectric                  : '3.0',
+//        assertJ                      : '2.4.0',
+//        equalsVerifier               : '1.7.5',
+        mockito                      : '1.10.19',
+        supportTestRunner            : '0.5',
+]
