--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.orium.testapplication"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
 
@@ -39,8 +39,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile "com.android.support:appcompat-v7:$rootProject.versions.supportLibs"
-    compile "com.android.support:recyclerview-v7:$rootProject.versions.supportLibs"
+    compile "com.android.support:appcompat-v7:24.2.0"
+    compile "com.android.support:recyclerview-v7:24.2.0"
 
     compile "com.squareup.retrofit2:retrofit:$rootProject.versions.retrofit"
     compile "com.squareup.retrofit2:converter-gson:$rootProject.versions.retrofit"
@@ -66,7 +66,7 @@ dependencies {
         exclude module: 'support-v4'
     }
     androidTestCompile "com.squareup.okhttp3:mockwebserver:$rootProject.versions.okHttp"
-    androidTestCompile "com.android.support:support-annotations:$rootProject.versions.supportLibs"
+    androidTestCompile "com.android.support:support-annotations:24.2.0"
 }
 
 configurations.compile.dependencies.each { compileDependency ->
