try material (temp commit)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
     compile "com.android.support:appcompat-v7:24.2.0"
     compile "com.android.support:recyclerview-v7:24.2.0"
+    compile "com.android.support:design:24.2.0"
 
     compile "com.squareup.retrofit2:retrofit:$rootProject.versions.retrofit"
     compile "com.squareup.retrofit2:converter-gson:$rootProject.versions.retrofit"
