--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,9 @@ dependencies {
     compile "com.squareup.retrofit2:converter-gson:$rootProject.versions.retrofit"
     compile "com.squareup.okhttp3:logging-interceptor:$rootProject.versions.okHttp"
 
-    compile "com.jakewharton:butterknife:$rootProject.versions.butterKnife"
+    compile "com.jakewharton:butterknife:8.1.0"
+    apt 'com.jakewharton:butterknife-compiler:8.1.0'
+
     compile "com.github.bumptech.glide:glide:$rootProject.versions.glide"
 
     compile "com.google.dagger:dagger:$rootProject.versions.dagger"
